# bonsoir

./: .gitignore  README.md  pyproject.toml
dockerfiles/: Dockerfile.eqmesh
examples/assistant/: hfagent_example.py
examples/sunset-shimmer/: config.yaml  create-secrets.sh  defunct-shimmer_agent-llamacpp.py  shimmer_agent-chatgpt.py
src/bonsoir/: agentbase_module.py  chatagentbase_module.py  chatgptagent_module.py
src/eqmesh/: __init__.py  chatbase_module.py  chatgpt_module.py  gptbase_module.py  llamacpp_module.py
src/examples/: shimmer_agent.py
src/examples/sunset-shimmer/: config.yaml  shimmer_agent-chatgpt.py  shimmer_agent.py
